<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colour"
    tools:context=".Yoga">


    <TextView
        android:id="@+id/yoga5link"
        android:layout_width="380dp"
        android:layout_height="29dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/https_www_youtube_com_watch_v_lsw39ao17h0"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <TextView
        android:id="@+id/yotext3"
        android:layout_width="338dp"
        android:layout_height="27dp"

        android:text="@string/_15_minute_yoga_session"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <TextView
        android:id="@+id/yoga2link"
        android:layout_width="366dp"
        android:layout_height="33dp"

        android:layout_marginStart="37dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/https_www_youtube_com_watch_v_evki3oxayvk"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yotext1"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/yogatxt"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="535dp"
        android:text="@string/yoga"
        android:textColor="#CF4A77"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/yotext1"
        android:layout_width="345dp"
        android:layout_height="31dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="407dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_2_minute_yoga_session"
        android:textColor="#090909"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yogatxt"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/yotext2"
        android:layout_width="338dp"
        android:layout_height="27dp"

        android:text="@string/_5_minute_yoga_session"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <TextView
        android:id="@+id/yoga15link"
        android:layout_width="376dp"
        android:layout_height="28dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/https_www_youtube_com_watch_v_5yf0nljawd8"
        android:textColor="#070707"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797" />



</androidx.constraintlayout.widget.ConstraintLayout>