<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colour"
    tools:context=".Meditation">

    <TextView
        android:id="@+id/meditate5link"
        android:layout_width="380dp"
        android:layout_height="29dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/https_www_youtube_com_watch_v_inpok4mkvlm"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <TextView
        android:id="@+id/metext3"
        android:layout_width="338dp"
        android:layout_height="27dp"

        android:text="@string/_10_minute_meditation_session"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <TextView
        android:id="@+id/yoga2link"
        android:layout_width="366dp"
        android:layout_height="33dp"

        android:layout_marginStart="37dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/https_www_youtube_com_watch_v_jholcb8gz0m"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metext1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/meditationtxt"
        android:layout_width="227dp"
        android:layout_height="38dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="161dp"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="535dp"
        android:text="@string/meditation"
        android:textColor="#CF4A77"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/metext1"
        android:layout_width="345dp"
        android:layout_height="31dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="407dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_2_minute_meditation_session"
        android:textColor="#090909"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meditationtxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/metext2"
        android:layout_width="338dp"
        android:layout_height="27dp"

        android:text="@string/_5_minute_meditation_session"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <TextView
        android:id="@+id/meditate15link"
        android:layout_width="376dp"
        android:layout_height="28dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/https_www_youtube_com_watch_v_ztoicychiou"
        android:textColor="#070707"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

</androidx.constraintlayout.widget.ConstraintLayout>