<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colour"
    tools:context=".Exercise">


    <TextView
        android:id="@+id/yoga5link"
        android:layout_width="380dp"
        android:layout_height="29dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/https_www_youtube_com_watch_v_g_d7ncac9rq"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <TextView
        android:id="@+id/exercise2link"
        android:layout_width="391dp"
        android:layout_height="37dp"

        android:layout_marginStart="37dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/https_www_youtube_com_watch_v_a9wc_elmp30"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/extext1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/exercisetxt"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="535dp"
        android:text="@string/exercise"
        android:textColor="#CF4A77"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/extext1"
        android:layout_width="345dp"
        android:layout_height="31dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="407dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_6_minute_exercises"
        android:textColor="#090909"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercisetxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/yotext2"
        android:layout_width="338dp"
        android:layout_height="27dp"

        android:text="@string/_10_minute_exercises"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

</androidx.constraintlayout.widget.ConstraintLayout>