<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">


    <TextView
        android:id="@+id/settext"
        android:layout_width="82dp"
        android:layout_height="28dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="228dp"
        android:text="@string/settings"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="625dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settext" />

    <TextView
        android:id="@+id/soundtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="213dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sound_settings"
        android:textColor="#F30707"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/voltxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
        android:id="@+id/voltxt"
        android:layout_width="314dp"
        android:layout_height="25dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="533dp"
        android:text="@string/volume"
        android:textColor="#050505"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundtxt" />

    <View
        android:id="@+id/divi"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/remtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voltxt" />

    <TextView
        android:id="@+id/remtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="276dp"
        android:layout_marginBottom="388dp"
        android:text="@string/short_reminders"
        android:textColor="#F30707"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divi"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="6dp"
        android:text="@string/drink_water_after_1_hr"
        android:textColor="#050505"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/stretch"
        app:layout_constraintEnd_toStartOf="@+id/switch3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remtxt" />

    <TextView
        android:id="@+id/stand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="219dp"
        android:layout_marginBottom="156dp"
        android:text="@string/stand_up_30_min"
        android:textColor="#040404"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stand" />


    <TextView
        android:id="@+id/stretch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="50dp"
        android:text="@string/stretch_for_a_bit_1_hr"
        android:textColor="#0C0C0C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/water" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="49dp"
        app:layout_constraintBottom_toTopOf="@+id/switch5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stretch"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="49dp"
        app:layout_constraintBottom_toTopOf="@+id/switch4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/water"
        app:layout_constraintTop_toBottomOf="@+id/divi" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="334dp"
        android:layout_height="20dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/divi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voltxt" />
</androidx.constraintlayout.widget.ConstraintLayout>