<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colour"
    tools:context=".Homescreen">

    <Button
        android:id="@+id/timerbutton"
        android:layout_width="185dp"
        android:layout_height="59dp"
        android:background="#D500F9"
        android:backgroundTint="#D500F9"
        android:backgroundTintMode="src_over"
        android:fontFamily="serif-monospace"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#1F3091"
        android:textStyle="bold"
        android:typeface="monospace"
        app:icon="@android:drawable/ic_lock_idle_alarm"
        app:iconPadding="@dimen/cardview_default_elevation"
        app:iconSize="30dp"
        app:iconTint="#121111"
        app:iconTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741" />

    <Button
        android:id="@+id/googleconnectbutton"
        android:layout_width="185dp"
        android:layout_height="59dp"
        android:background="#D500F9"
        android:backgroundTint="#D500F9"
        android:backgroundTintMode="src_over"
        android:fontFamily="serif-monospace"
        android:text="@string/connect"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#1F3091"
        android:textStyle="bold"
        android:typeface="monospace"
        app:iconPadding="@dimen/cardview_default_elevation"
        app:iconTint="#121111"
        app:iconTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608" />

    <Button
        android:id="@+id/quizbutton"
        android:layout_width="185dp"
        android:layout_height="59dp"
        android:background="#D500F9"
        android:backgroundTint="#D500F9"
        android:backgroundTintMode="src_in"
        android:fontFamily="serif-monospace"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#1F3091"
        android:textStyle="bold"
        android:typeface="monospace"
        app:icon="@android:drawable/ic_menu_sort_by_size"
        app:iconPadding="@dimen/cardview_default_elevation"
        app:iconTint="#121111"
        app:iconTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/infofloat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="src_in"
        android:clickable="true"
        android:contentDescription="@string/todo1"
        android:focusable="true"
        android:foregroundTint="#FFFFFF"
        android:tint="#EC62D5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997"
        app:rippleColor="#EC62D5"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsfloat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="21dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="src_in"
        android:clickable="true"
        android:contentDescription="@string/todo2"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toEndOf="@+id/infofloat"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90999997"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="131dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <View
        android:id="@+id/hdivi"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/quizbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hctext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="162dp"
        android:text="@string/home_screen"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/hdivi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jump"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="14dp"
        android:background="#D500F9"
        android:backgroundTint="#D500F9"
        android:backgroundTintMode="src_over"
        android:text="BREAK"
        app:layout_constraintBottom_toTopOf="@+id/hdivi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hctext" />

</androidx.constraintlayout.widget.ConstraintLayout>